update endpoint to a live API

--- a/modules/processor/src/main/resources/application.conf
+++ b/modules/processor/src/main/resources/application.conf
@@ -11,6 +11,6 @@ processor {
   }
 
   enrichmentConfig {
-    baseEndpoint = "https://restcountries.eu/rest/v2/name/"
+    baseEndpoint = "https://restcountries.com/v2/name/"
   }
 }
