Upgrade to ZIO 2.0.13

--- a/modules/processor/src/main/resources/application.conf
+++ b/modules/processor/src/main/resources/application.conf
@@ -1,16 +1,14 @@
-processor {
-  consumer {
-    bootstrapServers = "localhost:9092"
-    topic = "transactions.raw"
-    groupId = "transaction-consumer-0"
-  }
+consumer {
+  bootstrapServers = "localhost:9092"
+  topic = "transactions.raw"
+  groupId = "transaction-consumer-0"
+}
 
-  producer {
-    bootstrapServers = "localhost:9092"
-    topic = "transactions.enriched"
-  }
+producer {
+  bootstrapServers = "localhost:9092"
+  topic = "transactions.enriched"
+}
 
-  enrichmentConfig {
-    baseEndpoint = "https://restcountries.eu/rest/v2/name/"
-  }
+enrichment {
+  host = "restcountries.com"
 }
