--- a/modules/processor/src/main/resources/application.conf
+++ b/modules/processor/src/main/resources/application.conf
@@ -1,11 +1,11 @@
 consumer {
-  bootstrapServers = "localhost:9092"
+  bootstrapServers = ["localhost:9092"]
   topic = "transactions.raw"
   groupId = "transaction-consumer-0"
 }
 
 producer {
-  bootstrapServers = "localhost:9092"
+  bootstrapServers = ["localhost:9092"]
   topic = "transactions.enriched"
 }
 
